Closed Bug 1136799 Opened 9 years ago Closed 9 years ago

SIMD (interpreter): wrong order of operations on ReciprocalSqrt

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: ProgramFOX, Assigned: ProgramFOX)

Details

Attachments

(1 file, 1 obsolete file)

Currently, RecSqrt uses `1 / sqrt(x)`, but this is different from the polyfill, which uses `sqrt(1 / x)` [0], which makes a difference [1].
 
  [0]: https://github.com/johnmccutchan/ecmascript_simd/blob/master/src/ecmascript_simd.js#L1248-L1249
  [1]: http://logs.glob.uno/?c=mozilla%23jsapi&s=19+Dec+2014&e=19+Dec+2014&h=order+of+operations#c522774
Proposed patch.
Attachment #8569314 - Flags: review?(benj)
Comment on attachment 8569314 [details] [diff] [review]
Fixed order of operations of RecSqrt

Review of attachment 8569314 [details] [diff] [review]:
-----------------------------------------------------------------

Yep, nice find! Can you include the fullname in the patch changeset, please? (RecSqrt => ReciprocalSqrt)
Attachment #8569314 - Flags: review?(benj) → review+
New patch, with the commit message updated.

Try push:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=d559e365ed99
Assignee: nobody → programfox
Attachment #8569314 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #8569941 - Flags: review+
Try push succeeded (the canceled/failed/busted builds succeeded after retriggering), adding checkin-needed.
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/3bb518882815
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: